[profile.release]
lto = true
incremental = true

[profile.bench]
debug = true

[workspace]
resolver = "2"
members = [
    "bf-sharedmutex",
    "bf-vec",
    "benchmarks",
    "xtask"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.65"

[workspace.dependencies]
rand = "0.8"