[package]
name = "sharedmutex-benchmarks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bf-sharedmutex = { path = "../bf-sharedmutex/" }
bf-vec = { path = "../bf-vec" }
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam = "0.8"
pairlock = "0.1"
parking_lot = "0.12"
pflock = "0.2"
rand.workspace = true
shared-mutex = "0.3"
spin = "0.9"
tokio = { version = "1.3", features = ["sync", "rt-multi-thread"] }
widerwlock = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
process-sync = "0.2"

[[bench]]
name = "benchmarks"
harness = false
