[package]
name = "bf-sharedmutex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
loom = []

[dev-dependencies]
rand = "0.8.5"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }