[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13"
indoc = "2.0"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.12"
glob = "0.3"
fs_extra = "1.3"